# SnP500-Dashboard

./: .gitignore  Cargo.toml
src/: av.rs  data_manipulation.rs  main.rs
