[package]
name = "sector_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# snp500_data = "0.2.0"
# snp500_data = {path = "../snp500-data-retrieval"}
snp500_data = {path = "../get_snp_data"}
tokio = { version = "1", features = ["full"] }
polars-core = {version = "0.31.1", features = ["rows"]}
polars = {version = "0.31.1", features = ["object"]}
anyhow = "1.0.72"
csv = "1.2.2"
chrono = "0.4.26"
